--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ru.itmo.hls</groupId>
-	<artifactId>authorization-service</artifactId>
+	<artifactId>authorization</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>authorization-service</name>
-	<description>authorization-service</description>
+	<name>authorization</name>
+	<description>authorization</description>
 	<properties>
-		<java.version>19</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
