--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,31 @@
 spring:
+  application:
+    name: payment-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: syaofang
-    password: 12345678
+    url: jdbc:postgresql:localhost:5434/payment
+    username: postgres
+    password: itmoitmo
+    driver-class-name: org.postgresql.Driver
+  liquibase:
+    database-change-log-lock-table: database_migrations_lock
+    database-change-log-table: database_migrations
+  cloud:
+    config:
+    fail-fast: true
+  config:
+    import: "optional:configserver:http://localhost:8888/"
+
 server:
-  port: 8086
+  port: 8087
+
+spring.jpa.show-sql: true
+
+
+eureka:
+  instance:
+    prefer-ip-address: false
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      default-zone: http://localhost:8761/eureka/
