--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,17 @@ services:
     restart: on-failure
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: itmoitmo
+      POSTGRES_DB: auth
     ports:
       - "5433:5432"
+  postgres-payment:
+    container_name: "postgres_datasource_payment"
+    image: postgres:15.1
+    restart: on-failure
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: itmoitmo
+      POSTGRES_DB: payment
+    ports:
+      - "5434:5432"
