--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: payment-service
   datasource:
-    url: jdbc:postgresql:localhost:5434/payment
+    url: jdbc:postgresql://localhost:5434/payment
     username: postgres
     password: itmoitmo
     driver-class-name: org.postgresql.Driver
