--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,13 @@ services:
       POSTGRES_DB: payment
     ports:
       - "5434:5432"
+  postgres-chat:
+    container_name: "postgres_datasource_chat"
+    image: postgres:15.1
+    restart: on-failure
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: itmoitmo
+      POSTGRES_DB: chat
+    ports:
+      - "5435:5432"
