--- a/src/main/resources/config/user-service.yml
+++ b/src/main/resources/config/user-service.yml
@@ -1,17 +1,22 @@
 spring:
   application:
-    name: payment-service
+    name: user-service
+  cloud.config.uri: http://localhost:8888/config
   datasource:
-    url: jdbc:postgresql://localhost:5434/payment
+    url: jdbc:postgresql://localhost:5433/auth
     username: postgres
     password: itmoitmo
     driver-class-name: org.postgresql.Driver
   liquibase:
     database-change-log-lock-table: database_migrations_lock
     database-change-log-table: database_migrations
-
+jwt:
+  secret-key: qdGkiOiJjYTZiNTI3Ny01MTlkLTQ0NjctODg2Ny1jYTc4N
+  expire-duration:
+    access: 300
+    refresh: 604800
 server:
-  port: 8088
+  port: 8187
 
 spring.jpa.show-sql: true
 
@@ -24,3 +29,8 @@ eureka:
     register-with-eureka: true
     service-url:
       default-zone: http://localhost:8761/eureka/
+
+feign:
+  autoconfiguration:
+    jackson:
+      enabled: true
