--- a/src/main/resources/config/auth-service.yml
+++ b/src/main/resources/config/auth-service.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: user-service
+    name: auth-service
   cloud.config.uri: http://localhost:8888/config
   datasource:
     url: jdbc:postgresql://localhost:5433/auth
