--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: ${APPLICATION_NAME:user-service}
+    name: ${APPLICATION_NAME:auth-service}
   cloud.config.uri: http://${CONFIG_HOST:localhost}:${CONFIG_PORT:8888}/config
   datasource:
     url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5433}/${POSTGRES_DB:auth}
