--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>4.18.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>3.1.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
