fix(chat): module done

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,9 @@ spring:
       server:
         native:
           search-locations: classpath:/config
-
+eureka:
+  instance:
+    lease-renewal-interval-in-second: 3
 server:
   port: 8888
 
