--- a/src/main/resources/config/auth-service.yml
+++ b/src/main/resources/config/auth-service.yml
@@ -24,12 +24,12 @@ spring.jpa.show-sql: true
 eureka:
   instance:
     prefer-ip-address: false
+    lease-renewal-interval-in-second: 3
   client:
     fetch-registry: true
     register-with-eureka: true
     service-url:
       default-zone: http://localhost:8761/eureka/
-
 feign:
   autoconfiguration:
     jackson:
