--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+            <version>3.1.5</version>
+        </dependency>
     </dependencies>
 
     <build>
